added dropdown for service select

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
                     <input class="first-name" placeholder="First Name">
                     <input class="last-name" placeholder="Last Name">
                 </div>
-                <input class="contact-type" placeholder="Phone Number">
-                <input class="contact-type" placeholder="Select Service">
+                <input class="phone-number" placeholder="Phone Number">
+                <select class="service-select">
+                    <option value="select">Select Service</option>
+                  </select>
                 <button class="submit-button"><span class="submit-text">submit</span></button>
             </div>
         </div>
