--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="page">
-        <div class="header">
+        <header class="header">
             <div class="header-text">
                 <span class="h-text">Stay focused on saving money</span>
                 <span class="h-sub-text">It is important to stay focused on saving money in any way you can. We help
@@ -22,17 +22,14 @@
                 <img class="header-img" src="./img/header-img/Slider.png" alt="Man in a caffe">
             </div>
             <div class="header-icons">
-               <img src="./img/header-img/App Download Link.png" alt="icon for app download link">
+                <img src="./img/header-img/AppDownloadLink.png" alt="icon for app download link">
             </div>
+        </header>
 
-        </div>
-
-        <div class="contact-wrapper">
+        <main class="contact-wrapper">
             <div class="contact">
                 <span class="contact-text">Contact</span>
-                <span class="contact-sub-text">It is important to stay focused on saving money in any way you can. We
-                    help you monitor your spending habits so you can easily spot and cut any unnecessary expenses.
-                    Simply join today to get started!</span>
+                <span class="contact-sub-text">Questions or concerns? Just fill out the form below and our support team will get back to you within 24 hours</span>
             </div>
             <div class="contact-input">
                 <div class="name-input">
@@ -43,16 +40,14 @@
                 <select class="service-select">
                     <option value="select">Select Service</option>
                   </select>
-                <button class="submit-button"><span class="submit-text">submit</span></button>
+                <button class="submit-button"><span class="submit-text">submit now</span></button>
             </div>
-        </div>
+        </main>
 
-        <div class="info-wrapper">
+        <footer class="info-wrapper">
             <div class="address">
                 <div class="info-title">Address</div>
-                <div class="address-text">Pipang Ltd, Griva Digeni,
-                    81-83 Jacovides Tower, 1st Floor
-                    1090 Picosia USA</div>
+                <div class="address-text">Pipang Ltd, Griva Digeni, 81-83 Jacovides Tower, 1st Floor 1090 Picosia USA</div>
                 <div class="copyright-text">Copyright 2018 CloudBudget</div>
             </div>
             <div class="services">
@@ -73,9 +68,9 @@
             </div>
             <div class="support">
                 <span class="info-title">We Support</span>
-                <img class="pay-icon" src="./img/info-img/secure-p-1 1.png" alt="pay information">
+                <img class="pay-icon" src="./img/info-img/secure-p11.png" alt="pay information">
             </div>
-        </div>
+        </footer>
     </div>
 
 </body>
